# docker-101

./: .gitignore  docker-compose.example.yml  docker-compose.yml
app/: Dockerfile
app/.docker/: entrypoint.sh
django/: .gitignore  Dockerfile  pyproject.toml
django/.docker/: entrypoint.sh
django/setup/: settings.py
