[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Pedro Farias", email = "phjfg@cesar.org.br"},
]
dependencies = []
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "django>=4.0.6",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
